# alphagenome-viewer

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  THIRD-PARTY-NOTICES  alphagenome-viewer.def  docker-compose.yml  pyproject.toml  start.sh
.github/workflows/: publish.yml
backend/: .env.example  .gitignore  README.md  requirements.txt
backend/app/: cli.py  config.py  main.py
backend/app/routers/: config.py  metadata.py  predictions.py  variants.py
backend/app/schemas/: models.py
backend/app/services/: alphagenome.py  visualization.py
frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/components/: ApiKeySetupDialog.jsx  ThemeProvider.jsx
frontend/src/components/inputs/: IntervalInput.jsx  ModeSelector.jsx  OntologySelect.jsx  OutputTypeSelect.jsx  VariantInput.jsx
frontend/src/components/layout/: Header.jsx  InputPanel.jsx  ResultsPanel.jsx
frontend/src/components/results/: DataTable.jsx  LoadingState.jsx  PlotViewer.jsx
frontend/src/components/ui/: command.jsx  dialog.jsx
frontend/src/lib/: api.js
